--- a/rxjava/pom.xml
+++ b/rxjava/pom.xml
@@ -53,6 +53,20 @@
       <version>3.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/javax.jms/javax.jms-api -->
+    <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>21.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
